# linux_i2c_spi_demo

./: README.md  hardware-RaspberryPi.txt
i2c/: README.md  i2c  i2c_eeprom_demo.c  树莓派上如何操作外接I2C_EEPROM.mhtml
spi/: CMakeLists.txt  README.md  Raspberry Pi I2C_SPI Demo.mhtml  spi  spi_flash_demo.c  toolchain-arm-linux-gnueabihf.cmake  toolchain-arm-rockchip830-linux-uclibcgnueabihf.cmake  toolchain-arm64.cmake
